--- a/SolkAdmin.UI/Views/ServiceRequest/Get.cshtml
+++ b/SolkAdmin.UI/Views/ServiceRequest/Get.cshtml
@@ -1,9 +1,11 @@
-﻿@model IEnumerable<SolkAdmin.DTO.ServiceRequest>
+﻿@model IEnumerable<SolkAdmin.DTO.EnquiryForAdmin>
 
 @{
     ViewBag.Title = "ServiceRequest";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
 
 <h2>ServiceRequest</h2>
 
@@ -14,22 +16,22 @@
             @Html.DisplayNameFor(model => model.Code)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.InsuranceTypeId)
+            @Html.DisplayNameFor(model => model.EnquiryStatus)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserId)
+            @Html.DisplayNameFor(model => model.UserPhoneNumber)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TimeOccured)
+            @Html.DisplayNameFor(model => model.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Gender)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.VehicleNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClaimType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UsageType)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.RegistrationCategory)
@@ -38,79 +40,171 @@
             @Html.DisplayNameFor(model => model.VehicleValue)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.ClaimType)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UsageType)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.VehicleYear)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.IsFinanced)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BuyerResponded)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Location)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ClientType)
+            @Html.DisplayNameFor(model => model.CreatedTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ExpireTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StreetName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.City)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Telephone)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ContactMethod)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.RequestOrigin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IsQuoteSent)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastQuoteSentDate)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Code)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.InsuranceTypeId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TimeOccured)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.VehicleNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClaimType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UsageType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RegistrationCategory)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.VehicleValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.VehicleYear)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsFinanced)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BuyerResponded)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientType)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Code)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EnquiryStatus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserPhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Gender)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.VehicleNo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RegistrationCategory)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.VehicleValue)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ClaimType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UsageType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.VehicleYear)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsFinanced)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Location)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ExpireTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StreetName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telephone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContactMethod)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RequestOrigin)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsQuoteSent)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastQuoteSentDate)
+            </td>
+            <td>
+
+                @*<input type="button" id="SendQuoteButton" value="Send Quote" />*@
+
+                <a onclick="Open(@item.Id)">Send Quote</a>
+            </td>
+        </tr>
+    }
 
 </table>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Send Quotation</h4>
+            </div>
+            <div class="modal-body" id="Preview">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<script type="text/javascript">
+    function Open(currentId) {
+        $.ajax({
+            type: "Get",
+            url: '@Url.Action("GetDetail", "ServiceRequest")',
+            data: { id: currentId },
+            success: function (data) {
+                $('#Preview').html(data);
+                $('#myModal').modal('show');
+            }
+        })
+    }
+</script>
