--- a/SolkAdmin.UI/Views/ServiceRequest/Get.cshtml
+++ b/SolkAdmin.UI/Views/ServiceRequest/Get.cshtml
@@ -5,197 +5,203 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<script src="~/Scripts/bootstrap.min.js"></script>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-
 <h2>ServiceRequest</h2>
 
-<div>
+@using (Html.BeginForm("Get", "ServiceRequest", FormMethod.Post, new { id = "frmSearch" }))
+{
     <div class="form-group input-group-sm">
-        @Html.LabelFor(model => model.FromDate, new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.FromDate, new { @class = "date-picker" })
-            @Html.ValidationMessageFor(model => model.FromDate)
+        @Html.LabelFor(model => model.FromDate)
+        @Html.TextBoxFor(model => model.FromDate, new { @class = "form-control datepicker", placeholder = "Enter From date here..." })
+        @Html.ValidationMessageFor(model => model.FromDate)
+    </div>
+
+    <div class="form-group input-group-sm">
+        @Html.LabelFor(model => model.ToDate)
+        @Html.TextBoxFor(model => model.ToDate, new { @class = "form-control datepicker", placeholder = "Enter To date here..." })
+        @Html.ValidationMessageFor(model => model.ToDate)
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Search" class="btn btn-default" />
         </div>
     </div>
-</div>
 
-@if (Model.EnquiryForAdminDetails.Any())
-{
-    var headingItem = Model.EnquiryForAdminDetails.First();
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.Code)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.EnquiryStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.UserPhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.Gender)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.VehicleNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.RegistrationCategory)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.FuelType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.VehicleValue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.ClaimType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.UsageType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.VehicleYear)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.IsFinanced)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.Location)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.CreatedTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.ExpireTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.StreetName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.Telephone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.ContactMethod)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => headingItem.RequestOrigin)
-            </th>
-            @*<th>
-                    @Html.DisplayNameFor(model => headingItem.IsQuoteSent)
+    if (Model.EnquiryForAdminDetails.Any())
+    {
+        var headingItem = Model.EnquiryForAdminDetails.First();
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.Code)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => headingItem.LastQuoteSentDate)
-                </th>*@
-            <th></th>
-        </tr>
+                    @Html.DisplayNameFor(model => headingItem.EnquiryStatus)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.UserPhoneNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.LastName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.Gender)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.VehicleNo)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.RegistrationCategory)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.FuelType)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.VehicleValue)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.ClaimType)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.UsageType)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.VehicleYear)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.IsFinanced)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.Location)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.CreatedTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.ExpireTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.StreetName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.City)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.Telephone)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.ContactMethod)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => headingItem.RequestOrigin)
+                </th>
+                @*<th>
+                        @Html.DisplayNameFor(model => headingItem.IsQuoteSent)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => headingItem.LastQuoteSentDate)
+                    </th>*@
+                <th></th>
+            </tr>
 
-        @foreach (var item in Model.EnquiryForAdminDetails)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Code)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EnquiryStatus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserPhoneNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Gender)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.VehicleNo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegistrationCategory)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FuelType)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.VehicleValue)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClaimType)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UsageType)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.VehicleYear)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsFinanced)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Location)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedTime)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ExpireTime)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.StreetName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.City)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Telephone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContactMethod)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RequestOrigin)
-                </td>
-                @*<td>
-                        @Html.DisplayFor(modelItem => item.IsQuoteSent)
+            @foreach (var item in Model.EnquiryForAdminDetails)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Code)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.LastQuoteSentDate)
-                    </td>*@
-                <td>
+                        @Html.DisplayFor(modelItem => item.EnquiryStatus)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UserPhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Gender)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VehicleNo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RegistrationCategory)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FuelType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VehicleValue)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClaimType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UsageType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VehicleYear)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IsFinanced)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Location)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreatedTime)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ExpireTime)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StreetName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.City)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Telephone)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ContactMethod)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequestOrigin)
+                    </td>
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.IsQuoteSent)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastQuoteSentDate)
+                        </td>*@
+                    <td>
 
-                    <a onclick="Open(@item.Id)">Send Quote</a>
-                </td>
-            </tr>
-        }
+                        <a onclick="Open(@item.Id)">Send Quote</a>
+                    </td>
+                </tr>
+            }
 
-    </table>
+        </table>
+    }
+    else
+    {
+        @:No data available.
+    }
 }
-else
-{
-    @:No data available.
-}
-
 <!-- Modal -->
 <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
@@ -212,12 +218,13 @@ else
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
-
     </div>
 </div>
 
 
+
 <script type="text/javascript">
+
     function Open(currentId) {
         $.ajax({
             type: "Get",
@@ -231,15 +238,23 @@ else
     }
 
     $(function () {
-        // This should targe the element generated by your EditorFor() Helper
-        $('.datepicker').datepicker();
-    })
-
-    //$(document).ready(function () {
-
-    //    $('.datepicker').datetimepicker({
-    //        format: 'dd/mm/yyyy'
-    //    });
-    //});
+        $('#frmSearch').submit(function () {
+            $.ajax({
+                url: this.action,
+                type: this.method,
+                data: $(this).serialize(),
+                success: function (result) {
+                    // The AJAX call succeeded and the server returned a JSON
+                    // with a property "s" => we can use this property
+                    // and set the html of the target div
+                    $('#ShowResultHere').html(result.s);
+                }
+            });
+            // it is important to return false in order to
+            // cancel the default submission of the form
+            // and perform the AJAX call
+            return false;
+        });
+    });
 
 </script>
